--- a/english.html
+++ b/english.html
@@ -14,15 +14,15 @@
 </head>
 <body ng-app ng-controller='imgController'>
     <header>
-     <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
+      <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
         <div class='menu-link col-lg-1 col-md-1 col-sm-21 col-xs-1'>
            <a href="#main"><i class="fa fa-home"></i></a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#description">O MNIE</a>
+           <a href="#description">ABOUT ME</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#skills">UMIEJĘTNOŚCI</a>
+           <a href="#skills">SKILLS</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
         <a href='#portfolio'>PORTFOLIO</a>
@@ -31,7 +31,7 @@
         <a href="#contact"><i class="fa fa-envelope"></i></a>
     </div>
     <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-2'>
-        <a href='http://justynamachalica.890m.com/english.html'>ENG</a>
+        <a href='http://justynamachalica.890m.com'>PL</a>
     </div>
 </div>
 </div>
@@ -50,27 +50,27 @@
 
     <div class='about col-lg-8 col-md-8 col-sm-12 col-xs-12'>
 
-        <h4>Cześć,</h4>
+        <h4>Hi,</h4>
         <h5>
-            mam na imię Justyna i mieszkam niedaleko Krakowa. Jakiś czas temu zaczęłam swoją przygodę z kodem i "wsiąkłam".<br> 
-            Uwielbiam tworzyć a programowanie to umożliwia- kształtuje wirtualną rzeczywistość. <br>
+            my name is Justyna, I live near Cracow. Recently I started my adventure with coding and I love it, especially shaping virtual reality.<br>
 
-            Do tej pory nie zdobyłam jeszcze doświadczenia w komercyjnych projektach i dlatego szukam pracy lub zleceń, które dadzą mi możliwość rozwoju i poszerzania portfolio. Szczególnie chcę skupić się na frontendzie.<br>
+            I've not commercial experience yet- that's why I'm looking for job or projects, which help me gain experience and acquire skills. I want to widen my portfolio and getting better in frontend.<br>
 
-            Poza kodowaniem moją pasją jest gotowanie- to drugie pole na którym kocham wykazywać się kreatywnością na czym zyskują (podobno :) ) członkowie rodziny i znajomi.<br>
+            Besides coding my hobby is cooking and crocheting because I like to be creative.<br>
 
-            W wolnym czasie dużo czytam (głównie literaturę klasyczną i sf) oraz słucham muzyki- kocham poezję śpiewaną i rock.
+            In my free fime I'm reading (sf and classic literature) and listening music (my favourite is rock).
         </h5>    
     </div>
+
     <div class='col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 hidden-sm hidden-xs'>
         <img class='foto' src='img/zdj.JPG' alt='foto' />
     </div>
     
     <div class='soft-skills col-lg-12 col-md-12 col-sm-12 col-xs-12'>
      <h5>
-        Skończyłam studia techniczne-szybko się uczę, mam analityczny, ścisły umysł i zmysł estetyczny.<br>
-        Duże znaczenie przywiązuję do dobrych stosunków panujących w zespole pracujących razem ludzi- łatwo nawiązuję kontakty i staram się dbać o atmosferę w firmie. <br>
-        Posiadam doświadczenie w sprzedaży co ułatwia ewnetualne kontakty z klientem. <br>
+        I finished technical studies- I'm learning so fast, I'he analitical, strict mind. <br>
+        Important for me are relations in work so I always try to make it better. It's not difficult for me because I've good interpersonal skills.<br>
+        
 
     </h5>
 </div>
@@ -140,16 +140,16 @@
 
 <section id='portfolio' data-type="background" data-speed="10" class="pages me"> 
     <div class= 'github col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-        <h4>Próbki kodu</h4>
-        <a href='https://github.com/jusmac'>Moje konto na github.com</a>
+        <h4>Code samples</h4>
+        <a href='https://github.com/jusmac'>Account on github.com</a>
     </div>    
     <div class= 'project col-lg-6 col-md-6 col-sm-12 col-xs-12'>
      <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
         <img class='project-image-img' src='img/2.jpg' alt='project image'></div>
         <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-         <a href='http://justyna-m.890m.com/'>Blog kulinarny</a>
+         <a href='http://justyna-m.890m.com/'>Food blog</a>
          <p>
-             Blog kulinarny stworzony przy użyciu <span>Wordpressa</span> i biblioteki <span>jQuery</span> (szablon wykonany z wtyczką Timber wykorzystującą <span>Twig</span>)
+             Blog made using <span>Wordpress</span> and <span>jQuery library</span> (template made using plugin Timber with <span> Twig</span>)
          </p>
      </div>
      <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
@@ -171,9 +171,9 @@
  <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
     <img class='project-image-img' src='img/1.jpg' alt='project image'></div>
     <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-     <a href='http://winx-maker.890m.com/'>Gra typu "doll-maker"</a>
+     <a href='http://winx-maker.890m.com/'> Doll-maker game</a>
      <p>
-        Prosta gra dla dzieci typu "doll-maker". Przy jej tworzeniu zastosowałam: <span>jQuery</span>, <span>jQuery UI</span>, <span>Angularjs</span>, <span>Bootstrap</span> oraz <span>Gimp</span> do obróbki grafiki.
+        Simle game for girls made using: <span>jQuery</span>, <span>jQuery UI</span>, <span>Angularjs</span>, <span>Bootstrap</span> and <span>Gimp</span> to image processing
     </p>
 </div>
 <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
