--- a/english.html
+++ b/english.html
@@ -8,24 +8,25 @@
     <link href="index.css" rel="stylesheet">
     <link href="fonts.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Basic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <script src='js/modernizr.js'></script>
 </body>
 </head>
-<body ng-app ng-controller='imgController'>
+<body>
     <header>
-      <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
+     <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
         <div class='menu-link col-lg-1 col-md-1 col-sm-21 col-xs-1'>
            <a href="#main"><i class="fa fa-home"></i></a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#description">ABOUT ME</a>
+           <a href="#description">About me</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#skills">SKILLS</a>
+           <a href="#skills">Skills</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-        <a href='#portfolio'>PORTFOLIO</a>
+        <a href='#portfolio'>Portfolio</a>
     </div>
     <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
         <a href="#contact"><i class="fa fa-envelope"></i></a>
@@ -41,7 +42,7 @@
     <div class='main-title'>
         <h1>
            Justyna Machalica <br>
-           <span>Front End Developer</span>
+          Front End Developer
        </h1>
    </div>
 </section>   
@@ -51,15 +52,15 @@
     <div class='about col-lg-8 col-md-8 col-sm-12 col-xs-12'>
 
         <h4>Hi,</h4>
-        <h5>
+        <p>
             my name is Justyna, I live near Cracow. Recently I started my adventure with coding and I love it, especially shaping virtual reality.<br>
 
-            I've not commercial experience yet- that's why I'm looking for job or projects, which help me gain experience and acquire skills. I want to widen my portfolio and getting better in frontend.<br>
+            I've not commercial experience yet- that's why I'm looking for job or projects, which help me gain experience and acquire skills. I want to build my portfolio and get better in frontend.<br>
 
             Besides coding my hobby is cooking and crocheting because I like to be creative.<br>
 
             In my free fime I'm reading (sf and classic literature) and listening music (my favourite is rock).
-        </h5>    
+        </p>    
     </div>
 
     <div class='col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 hidden-sm hidden-xs'>
@@ -67,12 +68,12 @@
     </div>
     
     <div class='soft-skills col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-     <h5>
-        I finished technical studies- I'm learning so fast, I'he analitical, strict mind. <br>
-        Important for me are relations in work so I always try to make it better. It's not difficult for me because I've good interpersonal skills.<br>
+     <p>
+        I finished technical studies- I'm learning fast, I've analitical, strict mind. <br>
+         Relations in work are important for me so I always try to make it better. It's not difficult for me because I've good interpersonal skills.<br>
         
 
-    </h5>
+    </p>
 </div>
 
 <div class='none'></div>
@@ -145,11 +146,11 @@
     </div>    
     <div class= 'project col-lg-6 col-md-6 col-sm-12 col-xs-12'>
      <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-        <img class='project-image-img' src='img/2.jpg' alt='project image'></div>
+        <img class='project-image-img' src='img/blog.jpg' alt='project image'></div>
         <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-         <a href='http://justyna-m.890m.com/'>Food blog</a>
+         <a href='http://justyna-m.890m.com/'><h5>Food blog</h5></a>
          <p>
-             Blog made using <span>Wordpress</span> and <span>jQuery library</span> (template made using plugin Timber with <span> Twig</span>)
+             Blog made using Wordpress and jQuery library (template made using plugin Timber with Twig)
          </p>
      </div>
      <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
@@ -169,11 +170,11 @@
 </div>
 <div class= 'project col-lg-6 col-md-6 col-sm-12 col-xs-12'>
  <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-    <img class='project-image-img' src='img/1.jpg' alt='project image'></div>
+    <img class='project-image-img' src='img/winx.jpg' alt='project image'></div>
     <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-     <a href='http://winx-maker.890m.com/'> Doll-maker game</a>
+     <a href='http://winx-maker.890m.com/'> <h5>Doll-maker game</h5></a>
      <p>
-        Simle game for girls made using: <span>jQuery</span>, <span>jQuery UI</span>, <span>Angularjs</span>, <span>Bootstrap</span> and <span>Gimp</span> to image processing
+        Simle game for girls made using: jQuery, jQuery UI, Angularjs, Bootstrap and Gimp to image processing
     </p>
 </div>
 <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
@@ -207,9 +208,9 @@
 </section>
 <section id='contact' data-type="background" data-speed="10" class="pages me">     
    <div class='col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-       <h3>Justyna Machalica</h43>
-           <h5><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></h5>
-           <h3><span><i class="fa fa-mobile"></i> 502 719 350</span></h3>
+       <h1>Justyna Machalica</h1>
+           <p><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></p>
+           <h1><span><i class="fa fa-mobile"></i> 502 719 350</span></h1>
        </div>
        <div class='none'></div>
    </section> 
