--- a/index.html
+++ b/index.html
@@ -8,24 +8,25 @@
     <link href="index.css" rel="stylesheet">
     <link href="fonts.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Basic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <script src='js/modernizr.js'></script>
 </body>
 </head>
-<body ng-app ng-controller='imgController'>
+<body>
     <header>
      <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
         <div class='menu-link col-lg-1 col-md-1 col-sm-21 col-xs-1'>
            <a href="#main"><i class="fa fa-home"></i></a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#description">O MNIE</a>
+           <a href="#description">O mnie</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#skills">UMIEJĘTNOŚCI</a>
+           <a href="#skills">Umiejętności</a>
        </div>
        <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-        <a href='#portfolio'>PORTFOLIO</a>
+        <a href='#portfolio'>Portfolio</a>
     </div>
     <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
         <a href="#contact"><i class="fa fa-envelope"></i></a>
@@ -41,7 +42,7 @@
     <div class='main-title'>
         <h1>
            Justyna Machalica <br>
-           <span>Front End Developer</span>
+           Front End Developer
        </h1>
    </div>
 </section>   
@@ -51,7 +52,7 @@
     <div class='about col-lg-8 col-md-8 col-sm-12 col-xs-12'>
 
         <h4>Cześć,</h4>
-        <h5>
+        <p>
             mam na imię Justyna i mieszkam niedaleko Krakowa. Jakiś czas temu zaczęłam swoją przygodę z kodem i "wsiąkłam".<br> 
             Uwielbiam tworzyć a programowanie to umożliwia- kształtuje wirtualną rzeczywistość. <br>
 
@@ -60,25 +61,25 @@
             Poza kodowaniem moją pasją jest gotowanie- to drugie pole na którym kocham wykazywać się kreatywnością na czym zyskują (podobno :) ) członkowie rodziny i znajomi.<br>
 
             W wolnym czasie dużo czytam (głównie literaturę klasyczną i sf) oraz słucham muzyki- kocham poezję śpiewaną i rock.
-        </h5>    
+        </p>    
     </div>
     <div class='col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 hidden-sm hidden-xs'>
         <img class='foto' src='img/zdj.JPG' alt='foto' />
     </div>
     
     <div class='soft-skills col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-     <h5>
+     <p>
         Skończyłam studia techniczne-szybko się uczę, mam analityczny, ścisły umysł i zmysł estetyczny.<br>
         Duże znaczenie przywiązuję do dobrych stosunków panujących w zespole pracujących razem ludzi- łatwo nawiązuję kontakty i staram się dbać o atmosferę w firmie. <br>
         Posiadam doświadczenie w sprzedaży co ułatwia ewnetualne kontakty z klientem. <br>
 
-    </h5>
+    </p>
 </div>
 
 <div class='none'></div>
 </section>
 
-<section id="project1" data-type="background" data-speed="10" class="pages">  
+<section id="project1" data-type="background" data-speed="2" class="pages">  
 </section>
 
 <section id="skills" data-type="background" data-speed="10" class="pages me">
@@ -135,7 +136,7 @@
     <div class='none'></div>
 </section>  
 
-<section id="project2" data-type="background" data-speed="10" class="pages">
+<section id="project2" data-type="background" data-speed="2" class="pages">
 </section>
 
 <section id='portfolio' data-type="background" data-speed="10" class="pages me"> 
@@ -145,11 +146,11 @@
     </div>    
     <div class= 'project col-lg-6 col-md-6 col-sm-12 col-xs-12'>
      <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-        <img class='project-image-img' src='img/2.jpg' alt='project image'></div>
+        <img class='project-image-img' src='img/blog.jpg' alt='project image'></div>
         <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-         <a href='http://justyna-m.890m.com/'>Blog kulinarny</a>
+         <a href='http://justyna-m.890m.com/'><h5>Blog kulinarny</h5></a>
          <p>
-             Blog kulinarny stworzony przy użyciu <span>Wordpressa</span> i biblioteki <span>jQuery</span> (szablon wykonany z wtyczką Timber wykorzystującą <span>Twig</span>)
+             Blog kulinarny stworzony przy użyciu Wordpressa i biblioteki jQuery (szablon wykonany z wtyczką Timber wykorzystującą Twig)
          </p>
      </div>
      <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
@@ -169,11 +170,11 @@
 </div>
 <div class= 'project col-lg-6 col-md-6 col-sm-12 col-xs-12'>
  <div class='project-image col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-    <img class='project-image-img' src='img/1.jpg' alt='project image'></div>
+    <img class='project-image-img' src='img/winx.jpg' alt='project image'></div>
     <div class='project-caption col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-     <a href='http://winx-maker.890m.com/'>Gra typu "doll-maker"</a>
+     <a href='http://winx-maker.890m.com/'><h5>Gra typu "doll-maker"</h5></a>
      <p>
-        Prosta gra dla dzieci typu "doll-maker". Przy jej tworzeniu zastosowałam: <span>jQuery</span>, <span>jQuery UI</span>, <span>Angularjs</span>, <span>Bootstrap</span> oraz <span>Gimp</span> do obróbki grafiki.
+        Prosta gra dla dzieci typu "doll-maker". Przy jej tworzeniu zastosowałam: jQuery, jQuery UI, Angularjs, Bootstrap oraz Gimp do obróbki grafiki.
     </p>
 </div>
 <div class='project-technologies col-lg-12 col-md-12 col-sm-12 col-xs-12'>
@@ -203,13 +204,13 @@
 <div class='none'></div>
 </section> 
 
-<section id="project3" data-type="background" data-speed="10" class="pages">
+<section id="project3" data-type="background" data-speed="2" class="pages">
 </section>
 <section id='contact' data-type="background" data-speed="10" class="pages me">     
    <div class='col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-       <h3>Justyna Machalica</h43>
-           <h5><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></h5>
-           <h3><span><i class="fa fa-mobile"></i> 502 719 350</span></h3>
+       <h1>Justyna Machalica</h1>
+           <p><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></p>
+           <h1><span><i class="fa fa-mobile"></i> 502 719 350</span></h1>
        </div>
        <div class='none'></div>
    </section> 
