menu, height in vh

--- a/index.html
+++ b/index.html
@@ -2,40 +2,47 @@
 <html class="no-js" lang='pl'>
 <head> 
     <title>Justyna Machalica Front End Developer</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, jQuery">
+    <meta name="description" content="Justyna Machalica Front End Developer">
+    <meta name="author" content="justyna.machalica@gmail.com">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link href="fonts.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Basic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <script src='js/modernizr.js'></script>
-</body>
+    
 </head>
 <body>
     <header>
-     <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-        <div class='menu-link col-lg-1 col-md-1 col-sm-21 col-xs-1'>
-           <a href="#main"><i class="fa fa-home"></i></a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#description">O mnie</a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#skills">Umiejętności</a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-        <a href='#portfolio'>Portfolio</a>
-    </div>
-    <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
-        <a href="#contact"><i class="fa fa-envelope"></i></a>
-    </div>
-    <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-2'>
-        <a href='http://justynamachalica.890m.com/english.html'>ENG</a>
-    </div>
+
+        <nav class="navbar navbar-default">
+         <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
+          <ul class="nav navbar-nav col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <li class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
+               <a href="#main"><i class="fa fa-home"></i></a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-3 col-xs-3'>
+               <a href="#description">O mnie</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
+               <a href="#skills">Umiejętności</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-2'>
+               <a href='#portfolio'>Portfolio</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-1 col-sm-1 col-xs-1'>
+               <a href="#contact"><i class="fa fa-envelope"></i></a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-1 col-sm-1 col-xs-1'>
+            <a href='http://justynamachalica.890m.com/english.html'>ENG</a>
+        </li>
+    </ul>
 </div>
-</div>
+</nav>
+
 </header>
 
 <section id="main" data-type="background" data-speed="10" class="pages">
@@ -51,16 +58,17 @@
 
     <div class='about col-lg-8 col-md-8 col-sm-12 col-xs-12'>
 
-        <h4>Cześć,</h4>
+        <h4>Witaj</h4>
         <p>
-            mam na imię Justyna i mieszkam niedaleko Krakowa. Jakiś czas temu zaczęłam swoją przygodę z kodem i "wsiąkłam".<br> 
-            Uwielbiam tworzyć a programowanie to umożliwia- kształtuje wirtualną rzeczywistość. <br>
-
-            Do tej pory nie zdobyłam jeszcze doświadczenia w komercyjnych projektach i dlatego szukam pracy lub zleceń, które dadzą mi możliwość rozwoju i poszerzania portfolio. Szczególnie chcę skupić się na frontendzie.<br>
-
-            Poza kodowaniem moją pasją jest gotowanie- to drugie pole na którym kocham wykazywać się kreatywnością na czym zyskują (podobno :) ) członkowie rodziny i znajomi.<br>
-
-            W wolnym czasie dużo czytam (głównie literaturę klasyczną i sf) oraz słucham muzyki- kocham poezję śpiewaną i rock.
+            Mam na imię Justyna i mieszkam niedaleko Krakowa. Jakiś czas temu zaczęłam swoją przygodę z kodem i uznałam, że jest to coś, czym chcę  się profesjonalnie.    
+            <br> 
+            Uwielbiam tworzyć a programowanie to umożliwia, ponieważ kształtuje wirtualną rzeczywistość. 
+            <br>
+            Do tej pory nie zdobyłam jeszcze doświadczenia w komercyjnych projektach. Szukam pracy lub zleceń, które dadzą mi możliwość rozwoju i poszerzania portfolio. Szczególnie chcę skupić się na frontendzie.
+            <br>
+            Poza kodowaniem moją pasją jest gotowanie. To drugie pole na którym kocham wykazywać się kreatywnością a zyskują na tym (podobno :) ) członkowie rodziny i znajomi.
+            <br>
+            W wolnym czasie dużo czytam (głównie literaturę klasyczną i sf) oraz słucham muzyki.
         </p>    
     </div>
     <div class='col-lg-2 col-lg-offset-1 col-md-2 col-md-offset-1 hidden-sm hidden-xs'>
@@ -69,9 +77,12 @@
     
     <div class='soft-skills col-lg-12 col-md-12 col-sm-12 col-xs-12'>
      <p>
-        Skończyłam studia techniczne-szybko się uczę, mam analityczny, ścisły umysł i zmysł estetyczny.<br>
-        Duże znaczenie przywiązuję do dobrych stosunków panujących w zespole pracujących razem ludzi- łatwo nawiązuję kontakty i staram się dbać o atmosferę w firmie. <br>
-        Posiadam doświadczenie w sprzedaży co ułatwia ewnetualne kontakty z klientem. <br>
+        Skończyłam studia techniczne.Szybko się uczę, mam analityczny, ścisły umysł oraz zmysł estetyczny.
+        <br>
+        Duże znaczenie przywiązuję do dobrych stosunków panujących w zespole pracujących razem ludzi. Łatwo nawiązuję kontakty i staram się dbać o atmosferę w firmie.
+        <br>
+        Posiadam doświadczenie w sprzedaży, co ułatwia ewentualne kontakty z klientem. 
+        <br>
 
     </p>
 </div>
@@ -208,19 +219,16 @@
 </section>
 <section id='contact' data-type="background" data-speed="10" class="pages me">     
    <div class='col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-       <h1>Justyna Machalica</h1>
-           <p><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></p>
-           <h1><span><i class="fa fa-mobile"></i> 502 719 350</span></h1>
-       </div>
-       <div class='none'></div>
-   </section> 
-
-   <footer>
-
-   </footer>
-   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
-   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> 
-   <script src='bootstrap/js/bootstrap.min.js'></script>
-   <script src='js/app.js'></script>
+       <h2>Justyna Machalica</h2>
+       <p><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></p>
+       <h2><span><i class="fa fa-mobile"></i> 502 719 350</span></h2>
+   </div>
+   <div class='none'></div>
+</section> 
+<script src="//code.jquery.com/jquery-1.10.2.js"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> 
+<script src='bootstrap/js/bootstrap.min.js'></script>
+<script src='js/app.js'></script>
+<script src='js/modernizr.js'></script>
 </body>
 </html>
