--- a/english.html
+++ b/english.html
@@ -2,40 +2,46 @@
 <html class="no-js" lang='pl'>
 <head> 
     <title>Justyna Machalica Front End Developer</title>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML, CSS, JavaScript, jQuery">
+    <meta name="description" content="Justyna Machalica Front End Developer">
+    <meta name="author" content="justyna.machalica@gmail.com">
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="index.css" rel="stylesheet">
     <link href="fonts.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Narrow&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Basic&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <script src='js/modernizr.js'></script>
-</body>
+    
 </head>
 <body>
     <header>
-     <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
-        <div class='menu-link col-lg-1 col-md-1 col-sm-21 col-xs-1'>
-           <a href="#main"><i class="fa fa-home"></i></a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#description">About me</a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-           <a href="#skills">Skills</a>
-       </div>
-       <div class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
-        <a href='#portfolio'>Portfolio</a>
-    </div>
-    <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
-        <a href="#contact"><i class="fa fa-envelope"></i></a>
-    </div>
-    <div class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-2'>
-        <a href='http://justynamachalica.890m.com'>PL</a>
-    </div>
+    
+        <nav class="navbar navbar-default">
+         <div id='menu' class='col-lg-12 col-md-12 col-sm-12 col-xs-12'>
+          <ul class="nav navbar-nav col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <li class='menu-link col-lg-1 col-md-1 col-sm-1 col-xs-1'>
+               <a href="#main"><i class="fa fa-home"></i></a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-3 col-xs-3'>
+           <a href="#description">Me</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-3'>
+               <a href="#skills">Skills</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-2 col-sm-2 col-xs-2'>
+               <a href='#portfolio'>Portfolio</a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-1 col-sm-1 col-xs-1'>
+               <a href="#contact"><i class="fa fa-envelope"></i></a>
+           </li>
+           <li class='menu-link col-lg-2 col-md-1 col-sm-1 col-xs-1'>
+            <a href='http://justynamachalica.890m.com/index.html'>PL</a>
+        </li>
+    </ul>
 </div>
-</div>
+</nav>
 </header>
 
 <section id="main" data-type="background" data-speed="10" class="pages">
@@ -51,9 +57,9 @@
 
     <div class='about col-lg-8 col-md-8 col-sm-12 col-xs-12'>
 
-        <h4>Hi,</h4>
+        <h4>Hi</h4>
         <p>
-            my name is Justyna, I live near Cracow. Recently I started my adventure with coding and I love it, especially shaping virtual reality.<br>
+            My name is Justyna, I live near Cracow. Recently I started my adventure with coding and I love it, especially shaping virtual reality.<br>
 
             I've not commercial experience yet- that's why I'm looking for job or projects, which help me gain experience and acquire skills. I want to build my portfolio and get better in frontend.<br>
 
@@ -208,16 +214,13 @@
 </section>
 <section id='contact' data-type="background" data-speed="10" class="pages me">     
    <div class='col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-10 col-xs-offset-1'>
-       <h1>Justyna Machalica</h1>
+       <h2>Justyna Machalica</h2>
            <p><span><i class="fa fa-envelope"></i> justyna.machalica@gmail.com</span></p>
-           <h1><span><i class="fa fa-mobile"></i> 502 719 350</span></h1>
+           <h2><span><i class="fa fa-mobile"></i> 502 719 350</span></h2>
        </div>
        <div class='none'></div>
    </section> 
 
-   <footer>
-
-   </footer>
    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script> 
    <script src='bootstrap/js/bootstrap.min.js'></script>
